force-app/main/default/objects/Application_Section__c/fields/Required_Questions__c.field-meta.xml
<CustomField>
    <fullName>Required_Questions__c</fullName>
    <label>Required Questions</label>
    <summaryFilterItems>
        <field>Application_Detail__c.Required__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Application_Detail__c.Application_Section__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>