force-app/main/default/objects/Application_Section__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reference_Application_Section__c</columns>
    <columns>Display_Section_Label__c</columns>
    <columns>Application__c</columns>
    <columns>Completed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>